--- a/user_auth/package.json
+++ b/user_auth/package.json
@@ -46,7 +46,7 @@
   "scripts": {
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "start": "pm2 start scripts/start.js --name=\"User Auth UI\" -- start "
+    "start": "pm2 start -f scripts/start.js --name=\"$npm_package_sysauth_appname\""
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
@@ -54,6 +54,9 @@
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
     "typescript": "^3.1.4"
+  },
+  "sysauth": {
+    "appname": "[UXUI] - Application"
   },
   "babel": {
     "presets": [
