--- a/user_auth/package.json
+++ b/user_auth/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.1.2",
+    "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.0.3",
     "autoprefixer": "7.1.6",
     "babel-jest": "20.0.3",
@@ -29,6 +30,7 @@
     "react": "^16.5.0",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
+    "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
