--- a/user_auth/tsconfig.json
+++ b/user_auth/tsconfig.json
@@ -4,12 +4,20 @@
     "outDir": "build/dist",
     "target": "es5",
     "lib": ["es6", "dom"],
-    "module": "commonjs",
+    "module": "esnext",
     "jsx": "react",
     "sourceMap": true,
     "allowJs": true,
     "moduleResolution": "node",
-    "rootDir": "src"
+    "rootDir": "src",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "importHelpers": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true
   },
   "exclude": [
     "node_modules",
